style: Add a maxw width of 100% to text field to prevent overflow.

--- a/content/sass/components/textfield.scss
+++ b/content/sass/components/textfield.scss
@@ -2,6 +2,7 @@
 
 .textfield {
     display: inline;
+    max-width: 100%;
 
     &-grow {
         display: inline-flex;
